fixed table problem where it is not showing

--- a/PRINTABLE/Replica.css
+++ b/PRINTABLE/Replica.css
@@ -11,8 +11,7 @@ body {
 .invoice-container {
   max-width: 900px;
   margin: 0 auto;
-  border: 1px solid #000;
-  padding: 10px 20px 20px 20px;
+  padding: 10px 10px 10px 10px;
 }
 
 /* ----------------------------------
